k8s/09-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: user-mgmt
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
